--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>holle</title>
 		<link rel="stylesheet" href="css/new_file.css" />
 	</head>
 
